--- a/server/views/partials/header.ejs
+++ b/server/views/partials/header.ejs
@@ -13,7 +13,7 @@
         <div class="container-fluid">
             <div class="nav-content">
                 <a class="navbar-brand" href="/">
-                    <img src="/assets/favicon-96x96.png" alt="" width="30" height="30" class="d-inline-block align-top">
+                    <img src="/assets/exphare.png" alt="" width="30" height="30" class="d-inline-block align-top">
                     Exphare - Aprenda mais!
                 </a>
             </div>
