--- a/server/views/login.ejs
+++ b/server/views/login.ejs
@@ -1,7 +1,7 @@
 <%- include('partials/header') -%>
 <div class="container">
     <div class="card text-center border border-primary" style="background-color: #12111c;">
-        <img src="/assets/card.jpg" class="card-img" alt="Exphare - Aprenda mais!" />
+        <img src="/assets/exphareCard.jpg" class="card-img" alt="Exphare - Aprenda mais!" />
         <br>
         <h5 class="card-title text-white">Exphare - Aprenda mais!</h5>
         <div class="card-body">
