add login-card class

--- a/server/views/login.ejs
+++ b/server/views/login.ejs
@@ -1,6 +1,6 @@
 <%- include('partials/header') -%>
 <div class="container">
-    <div class="card text-center border border-primary" style="background-color: #12111c;">
+    <div class="card login-card text-center border border-primary" style="background-color: #12111c;">
         <img src="/assets/exphareCard.jpg" class="card-img" alt="Exphare - Aprenda mais!" />
         <br>
         <h5 class="card-title text-white">Exphare - Aprenda mais!</h5>
