--- a/server/public/stylesheets/styles.css
+++ b/server/public/stylesheets/styles.css
@@ -6,7 +6,6 @@
 
 body, html {
     height: 100%;
-    overflow: hidden;
 }
 
 .content {
@@ -14,7 +13,7 @@ body, html {
     margin-right: 2%;
 }
 
-.card {
+.login-card {
     width: 21rem;
     position: absolute;
     top: 50%;
@@ -22,6 +21,13 @@ body, html {
     transform: translate(-50%, 15%);
 }
 
+.register-card {
+    width: 21rem;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, 5%);
+}
 
 .background {
     background-image: url("../assets/background.jpg");
