set username and tag

--- a/server/views/register.ejs
+++ b/server/views/register.ejs
@@ -12,13 +12,10 @@
             </div>
             <br>
             <div class="input-group">
-                <span class="input-group-text">Nome</span>
-                <input type="text" disabled value="<%= name %>" class="form-control" id="name">
-            </div>
-            <br>
-            <div class="input-group">
                 <span class="input-group-text">Usuário</span>
-                <input type="text" required placeholder="username" class="form-control" id="username">
+                <input type="text" disabled value="<%= username %>" class="form-control" id="username">
+                <span class="input-group-text">#</span>
+                <input type="text" disabled value="<%= tag %>" class="form-control" id="tag">
             </div>
             <br>
             <div class="input-group">
