--- a/server/views/register.ejs
+++ b/server/views/register.ejs
@@ -5,7 +5,7 @@
         <br>
         <h5 class="card-title text-white">Exphare - Aprenda mais!</h5>
         <div class="card-body">
-            <form>
+            <form method="POST" action="/register">
             <div class="input-group">
                 <span class="input-group-text">Id</span>
                 <input type="text" disabled value="<%= id %>" class="form-control" id="id">
